# property-reel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  best-shot-extraction-pipeline.md  create_runpod_template.py  justfile  main.py  parse_runpod_response.py  pipeline-steps.md  pyproject.toml  roadmap.md  runpod_config.json  setup_runpod.py  setup_runpod_fresh.py  test_api_e2e.py  test_blip2_local.py  test_frame_analysis.json  test_runpod_connection.py  test_runpod_direct.py  test_s3_validation.py  test_upload.py
.github/workflows/: deploy-runpod.yml
api/: jobs.py  webhook.py
aws_jump_box/: .gitignore  README.md  main.tf  outputs.tf  user_data.sh  variables.tf
backend/: .env.example  README.md  __init__.py  alembic.ini  create_runpod_template.py  justfile  main.py  parse_runpod_response.py  pyproject.toml  requirements.txt  run.py  setup_runpod.py  start.sh  test_download.py  test_s3.py  test_s3_validation.py  test_upload.py  update_runpod_image.py
backend/.github/workflows/: deploy-runpod.yml
backend/alembic/: env.py
backend/alembic/versions/: 6b8240022727_initial_schema.py
backend/api/: health.py  jobs.py  webhook.py
backend/database/: connection.py  models.py
backend/runpod/: handler.py
backend/services/: runpod_service.py  s3_service.py
backend/utils/: config.py  validation.py
config/: aerial.yaml  aerial_smooth.yaml  default.yaml  interior.yaml  static.yaml  tracking.yaml
database/: connection.py
dev_runpod/: Dockerfile  Justfile
iam/: policy-s3-api.json  policy-s3-bucket-rw.json  policy-s3-runpod.json
runpod/: .dockerignore  Dockerfile  handler.py  justfile  requirements-runpod.txt
services/: runpod_service.py  s3_service.py
src/best_shot_extraction/: __init__.py  cli.py  clip_extractor.py  diversity.py  frame_extractor.py  pipeline.py  shot_detection.py  temporal.py
src/best_shot_extraction/models/: __init__.py  clip_model.py
src/best_shot_extraction/scorers/: __init__.py  aesthetics.py  base.py  composite.py  exposure.py  motion.py  saliency.py  sharpness.py
src/best_shot_extraction/utils/: __init__.py  motion.py  video.py  visualization.py
utils/: config.py  validation.py
