[project]
name = "real-estate-backend"
version = "1.0.0"
description = "Backend API for real estate video processing pipeline with RunPod integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.42",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.40.6",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
migrations = [
    "alembic>=1.16.4",
]

[project.scripts]
backend = "main:run"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
